# vibe-blocks

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/01-quickstart/: 01-concept.md  02-quick-start.md
docs/02-initialization/: 01-new-project.md  02-existing-project.md
docs/03-operations/: 01-create-block.md  02-update-block.md  03-use-block.md
docs/04-collaboration/: 01-team-workflow.md  02-merge-conflicts.md
docs/05-visualization/: README.md
examples/: README.md
examples/fresh-mart/: CLAUDE.md  README.md  pom.xml
examples/fresh-mart/.ai/: OVERVIEW.md  README.md  blocks-view.html  conventions.md
examples/fresh-mart/.ai/blocks/: _index.md  _template.md  coupon_create.md  coupon_receive.md  member_level_upgrade.md  member_register.md  order_create.md  order_pay.md  order_refund.md  product_browse.md
examples/fresh-mart/.ai/decisions/: 001-bff-pattern.md  002-distributed-tx.md
examples/fresh-mart/.ai/prompts/: new-order-status.md
examples/fresh-mart/.ai/references/: data-ownership.md  enums.md
examples/fresh-mart/.ai/services/: admin-server.md  member-service.md  mini-server.md  order-service.md  product-service.md  promotion-service.md
examples/fresh-mart/admin-server/src/main/java/com/freshmart/client/: Clients.java
examples/fresh-mart/admin-server/src/main/java/com/freshmart/controller/: AdminController.java
examples/fresh-mart/order-service/src/main/resources/: application.yml
examples/landing-page/: README.md  index.html
src/vibe_blocks/: __init__.py  cli.py  topology.py  utils.py
src/vibe_blocks/assets/: project-blocks.html
src/vibe_blocks/commands/: __init__.py  build.py  claude_md.py  init.py  new.py
src/vibe_blocks/parsers/: __init__.py
src/vibe_blocks/templates/: CLAUDE.md.tmpl  OVERVIEW.md.tmpl  __init__.py  ai-README.md.tmpl  block-template.md.tmpl  blocks-index.md.tmpl  conventions.md.tmpl  new-block.md.tmpl
tests/: __init__.py  test_cli.py
(+11 files in other folders)
